@@ -28,10 +28,10 @@ consume_arg (int argc, ACE_TCHAR *argv[])
 {
   ACE_Arg_Shifter arg_shifter (argc, argv);
 
-  if (arg_shifter.is_anything_left ()) 
+  if (arg_shifter.is_anything_left ())
     arg_shifter.consume_arg (1);
   // Once we initialize an arg_shifter, we must iterate through it all!
-  while ((arg_shifter.is_anything_left ())) 
+  while ((arg_shifter.is_anything_left ()))
     arg_shifter.ignore_arg (1);
 }
 
@@ -95,7 +95,7 @@ test_argv_type_converter (void)
     consume_arg ( ct3.get_argc (), ct3.get_TCHAR_argv ());
   }
 
-  { 
+  {
     for (size_t i = 0; i < 4; i++)
       ACE_DEBUG ((LM_DEBUG,
                   ACE_TEXT (" (%d) %s\n"),
@@ -103,7 +103,7 @@ test_argv_type_converter (void)
                   ACE_TEXT_CHAR_TO_TCHAR (argv[i])));
   }
 
-  for (size_t i = 0; save_argv[i]; ++i) 
+  for (size_t i = 0; save_argv[i]; ++i)
     ACE_OS_Memory::free (save_argv[i]);
 
   return 0;
@@ -140,7 +140,7 @@ test_argv_type_converter2 (void)
                   argv[i]));
   }
 
-  for (size_t i = 0; save_argv[i]; ++i) 
+  for (size_t i = 0; save_argv[i]; ++i)
     ACE_OS_Memory::free (save_argv[i]);
 
   return 0;
@@ -172,7 +172,7 @@ test_argv_buf (void)
   l_argv[2] = 0;
 
   ACE_ARGV my_argv (l_argv);
-  
+
   // This shouldn't have any quotes in it.
   ACE_DEBUG ((LM_DEBUG, "%s\n", my_argv.buf ()));
   return 0;
@@ -181,11 +181,11 @@ test_argv_buf (void)
 static int
 test_argv_quotes (void)
 {
-  char *argv[] = { "first",
-                   "'second in single quotes'",
-                   "\"third in double quotes\""
-                 };
-  int argc = 3;                   
+  const char *argv[] = { "first",
+                         "'second in single quotes'",
+                         "\"third in double quotes\""
+                       };
+  int argc = 3;
 
   // (argc, argv)
   ACE_DEBUG ((LM_DEBUG, ACE_TEXT ("\n*** argv ***\n")));
@@ -193,15 +193,15 @@ test_argv_quotes (void)
 
   for (int i = 0; i < argc; ++i)
     ACE_DEBUG ((LM_DEBUG, ACE_TEXT ("argv[%02d] = %s\n"), i, argv[i]));
- 
+
   // args
   ACE_ARGV args;
-  for (int i = 0; i < argc; ++i) 
+  for (int i = 0; i < argc; ++i)
     args.add (argv[i]);
   args.add (ACE_TEXT ("'fourth in single quotes'"));
   args.add (ACE_TEXT ("\"fifth in double quotes\""));
   args.add (ACE_TEXT ("sixth without any quotes"));
- 
+
   ACE_DEBUG ((LM_DEBUG, ACE_TEXT ("\n*** args-1 ***\n")));
   ACE_DEBUG ((LM_DEBUG, ACE_TEXT ("args.argc (): %d\n"), args.argc ()));
 
@@ -209,7 +209,7 @@ test_argv_quotes (void)
     ACE_DEBUG ((LM_DEBUG, ACE_TEXT ("args[%02d]: %s\n"), i, args[i]));
 
   ACE_DEBUG ((LM_DEBUG, ACE_TEXT ("args.argc (): %d\n"), args.argc ()));
- 
+
   ACE_DEBUG ((LM_DEBUG, ACE_TEXT ("\n*** args-2 ***\n")));
   ACE_DEBUG ((LM_DEBUG, ACE_TEXT ("args.argc (): %d\n"), args.argc ()));
 
@@ -218,7 +218,7 @@ test_argv_quotes (void)
                 i, args.argv ()[i]));
 
   ACE_DEBUG ((LM_DEBUG, ACE_TEXT ("args.argc (): %d\n"), args.argc ()));
- 
+
   return 0;
 }
 
